# ai-ml-emulation-layer-for-vulkan

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  README.md  RELEASE_NOTES.md  REUSE.toml  ai-ml-sdk-emulation-layer.spdx.json  conanfile.txt
.reuse/: dep5
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
cmake/: package.cmake  setLayerEntrypoints.cmake  spirv-cross.cmake  version.cmake
cmake/toolchain/: gnu_compiler_options.cmake  windows-msvc.cmake
common/: CMakeLists.txt  log.cpp  utils.cpp  version.hpp.in
common/include/mlel/: float.hpp  log.hpp  utils.hpp  vulkan_allocator.hpp  vulkan_layer.hpp
docs/: Doxyfile  docs.cmake
docs/source/: conf.py  graph_profiling.inc  usage.rst
graph/: CMakeLists.txt  VkLayer_Graph.def  compute.cpp  compute.hpp  compute_graph_op.cpp  compute_graph_op.hpp  compute_optical_flow.cpp  compute_optical_flow.hpp  compute_pipeline_common.cpp  compute_pipeline_common.hpp  graph_layer.cpp  graph_profiler.cpp  graph_profiler.hpp  image.cpp  image.hpp  interval_memory_planner.cpp  interval_memory_planner.hpp  interval_memory_planner_detail.cpp  memory_planner.cpp  memory_planner.hpp  optical_flow.cpp  optical_flow.hpp  pipeline_cache.cpp  pipeline_cache.hpp  spirv_pass.cpp  spirv_pass.hpp  spirv_pass_tosaspv_v100.cpp  spirv_pass_tosaspv_v100.hpp  tensor.cpp  tensor.hpp
graph/layer.d/: VkLayer_Graph.json.in
graph/shaders/: CMakeLists.txt  generate_glsl_header.cmake  generate_spv.cmake  generate_spv_header.cmake
graph/shaders/graph_op/: common.comp
graph/shaders/graph_op/motion_engine/: block_match.comp
graph/shaders/graph_op/tosa/: argmax.comp  arithmetic_right_shift.comp  avgpool2d.comp  concat.comp  conv2d.comp  conv3d.comp  depthwise_conv2d.comp  elementwise_binary.comp  fft2d.comp  gather.comp  maxpool2d.comp  mul.comp  pad.comp  rescale.comp  reshape.comp  reverse.comp  rfft2d.comp  scatter.comp  select.comp  slice.comp  table.comp  tile.comp  transpose.comp
graph/shaders/optical_flow/: bilateral_filter.comp  block_match_of.comp  dense_warp.comp  downsample.comp  median_filter.comp  mv_process_and_warp.comp  mv_replace.comp  rgb_to_y.comp  subpixel_me.comp
graph/tosa/: CMakeLists.txt  argmax.comp  avgpool2d.comp  block_match.comp  cast.comp  clamp.comp  common.comp  conv2d.comp  conv3d.comp  depthwise_conv2d.comp  elementwise_binary.comp  elementwise_unary.comp  fft2d.comp  generate_glsl_header.cmake  generate_spv.cmake  matmul.comp  maxpool2d.comp  negate.comp  pad.comp  reduce.comp  resize.comp  table.comp  transpose_conv2d.comp
pip_package/: pyproject.toml  setup.py  setup.py.template
pip_package/emulation_layer/: cli.py
scripts/: build.py
tensor/: CMakeLists.txt  VkLayer_Tensor.def  descriptor_binding.hpp  spirv_glsl_tensor_buffer.cpp  spirv_glsl_tensor_buffer.hpp  tensor_arm.cpp  tensor_arm.hpp  tensor_arm_detail.hpp  tensor_descriptor.cpp  tensor_descriptor.hpp  tensor_layer.cpp  tensor_processor.cpp  tensor_processor.hpp  tensor_view.cpp  tensor_view.hpp
tensor/layer.d/: VkLayer_Tensor.json.in
tensor/shaders/: tensor.glsl  tensor_mvk.glsl
tests/: CMakeLists.txt  common_tests.cpp  optical_flow_tests.cpp  spirv_pass_tests.cpp  test_utils.cpp  test_utils.hpp  vulkan.cpp
tests/graph/: interval_memory_planner_tests.cpp  spirv_pass_tests.cpp
tests/shader/: arshift_specbool.spvasm  conv2_acc_int64.spvasm  conv3d_inline_bf16_constant.spvasm  conv3d_inline_fp8e4m3_constant.spvasm  conv3d_inline_fp8e5m2_constant.spvasm  conv3d_large_stride.spvasm  graph-constant-arm.spvasm  inlined-higher-rank-constant.spvasm  me_min_sad_cost_sr0.spvasm  me_min_sad_sr0.spvasm  me_raw_sad_sr0.spvasm  sin.spvasm  tensor.comp  tensor_array.comp  tensor_image_alias.comp
tests/tensor/: tensor_arm_tests.cpp
utilities/: CMakeLists.txt  device.cpp  pipeline.cpp  tensor.cpp
utilities/include/mlel/: device.hpp  exception.hpp  pipeline.hpp  tensor.hpp
