#
# SPDX-FileCopyrightText: Copyright 2025 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: Apache-2.0
#
[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_ml_emulation_layer_for_vulkan"
dynamic = ["version"]

[project.scripts]
emulation_layer = "emulation_layer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
emulation_layer = ["deploy/**"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
